# multi-search

multi-search/: CLAUDE.md  package-lock.json  package.json
multi-search/src/: App.tsx  SearchBar.css  SearchBar.tsx
multi-search/src-tauri/: Cargo.toml  tauri.conf.json
multi-search/src-tauri/src/: embedding_generator.rs  index_manager.rs  lib.rs  main.rs  orchestrator.rs  parsers.rs  vector_db.rs
