[package]
name = "multi-search"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "multi_search_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2.0.0", features = ["macos-private-api"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-global-shortcut = "2.0.0-beta"
window-vibrancy = "0.6.0"
tantivy = "0.22"
dirs = "5.0"
anyhow = "1.0"
candle-core = "0.8.0"
candle-nn = "0.8.0"
candle-transformers = "0.8.0"
tokenizers = "0.19.1"
hf-hub = { version = "0.3.2", features = ["tokio"] }
text-splitter = { version = "0.3.0", features = ["tokenizers"] }
tokio = { version = "1", features = ["full"] }
unicode-segmentation = "1.10"
lancedb = "0.18"
arrow = "54.0"
futures = "0.3"
sha2 = "0.10"
# Document parsing dependencies
lopdf = "0.36.0"
pdf-extract = "0.9.0"
dotext = "0.1.1"
docx-rs = "0.4.17"


[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.25"
objc = "0.2"

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_Graphics_Dwm",
    "Win32_System_LibraryLoader",
] } 

# Explicit dependency constraints to resolve version conflicts
rand = "0.8.5"
rand_distr = "0.4.3"
half = "2.4.0"
serde_json = "1.0"
